<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/background_linear"
	    android:isScrollContainer="true"
	    android:paddingBottom="18dp" >
	
	    <TextView
	        android:id="@+id/register_title"
	        style="@style/title_box_short"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="2dp"
	        android:gravity="center"
	        android:text="@string/main_title"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/text_dark"
	        android:textSize="16sp" />
	
	    <TextView
	        android:id="@+id/register_header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/register_title"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="24dp"
	        android:text="@string/register_header"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/text_dark" />
	
	    <LinearLayout
	        android:id="@+id/horizontal_1"
	        android:layout_width="60dp"
	        android:layout_height="2dp"
	        android:layout_below="@+id/register_header"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="12dp"
	        android:background="@color/text_dark" >
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/register_label_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/horizontal_1"
	        android:layout_marginLeft="18dp"
	        android:layout_marginTop="18dp"
	        android:text="@string/register_label_name"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/text_dark" />
	
	    <EditText
	        android:id="@+id/register_field_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_label_name"
	        android:layout_marginTop="6dp"
	        android:ems="10"
	        android:inputType="text"
	        android:hint="@string/register_label_name" >
	
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:id="@+id/register_label_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_field_name"
	        android:layout_marginTop="12dp"
	        android:text="@string/register_label_email"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/text_dark" />
	
	    <EditText
	        android:id="@+id/register_field_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_label_email"
	        android:layout_marginTop="6dp"
	        android:ems="10"
	        android:inputType="textEmailAddress"
	        android:hint="@string/register_label_email" >
	    </EditText>
	    
	    <TextView
	        android:id="@+id/register_label_email_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_field_email"
	        android:layout_marginTop="12dp"
	        android:text="@string/register_label_email_confirm"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/text_dark" />
	
	    <EditText
	        android:id="@+id/register_field_email_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_label_email_confirm"
	        android:layout_marginTop="6dp"
	        android:ems="10"
	        android:inputType="textEmailAddress"
	        android:hint="@string/register_label_email_confirm" >
	    </EditText>
	    
	    <TextView
	        android:id="@+id/register_label_pin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_field_email_confirm"
	        android:layout_marginTop="12dp"
	        android:text="@string/register_label_pin"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/text_dark" />
	
	    <EditText
	        android:id="@+id/register_field_pin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_below="@+id/register_label_pin"
	        android:layout_marginTop="6dp"
	        android:ems="4"
	        android:inputType="textPassword|number"
	        android:hint="@string/register_label_pin" >
	    </EditText>
	
	    <CheckBox
	        android:id="@+id/register_opt_in1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/register_field_pin"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_marginTop="18dp"
	        android:text="@string/register_opt_in1"
	        android:textColor="@color/text_dark" />
	    
	    <CheckBox
	        android:id="@+id/register_opt_in2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/register_opt_in1"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_marginTop="12dp"
	        android:text="@string/register_opt_in2"
	        android:textColor="@color/text_dark" />
	
	    <Button
	        android:id="@+id/register_button_submit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/register_opt_in2"
	        android:layout_alignLeft="@+id/register_label_name"
	        android:layout_marginTop="24dp"
	        android:text="@string/button_submit" />
	    
	    <Button
	        android:id="@+id/register_button_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/register_button_submit"
	        android:layout_below="@+id/register_opt_in2"
	        android:layout_marginLeft="12dp"
	        android:layout_marginTop="24dp"
	        android:text="@string/button_cancel" />
	
	</RelativeLayout>
	
</ScrollView>