<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/background_linear"
	    android:isScrollContainer="true"
	    android:padding="@string/standard_padding" >
	
	    <TextView
	        android:id="@+id/instructions_title"
	        style="@style/title_box_short"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="2dp"
	        android:gravity="center"
	        android:text="@string/main_title"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/text_dark"
	        android:textSize="16dp" />
	    
	    <TextView
	        android:id="@+id/instructions_header1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/instructions_title"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="24dp"
	        android:text="@string/instructions_regConfirm1"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/text_dark" />
	
	    <LinearLayout
	        android:id="@+id/horizontal_1"
	        android:layout_width="60dp"
	        android:layout_height="2dp"
	        android:layout_below="@+id/instructions_header1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="12dp"
	        android:background="@color/text_dark" >
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/instructions_header2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/horizontal_1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="12dp"
	        android:text="@string/instructions_regConfirm2"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/text_dark" />

	    <!--  first panel -->
	    <RelativeLayout
	        android:id="@+id/instructions_panel1"
	        style="@style/instructions_panel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/instructions_header2"
	        android:layout_marginTop="@string/standard_margin"
	        android:isScrollContainer="true"
	        android:padding="@string/standard_padding" >

	        <ImageView
	            android:id="@+id/instructions_image1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:src="@drawable/instructions_fpo" />
	        
	        <TextView
	            android:id="@+id/instructions_panelText1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/instructions_image1"
	            android:layout_marginLeft="@string/standard_margin"
	            android:text="@string/instructions_panel1"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/text_light" />
	        
	    </RelativeLayout>
	    
	    <!--  second panel -->
	    <RelativeLayout
	        android:id="@+id/instructions_panel2"
	        style="@style/instructions_panel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/instructions_panel1"
	        android:layout_marginTop="@string/standard_margin"
	        android:isScrollContainer="true"
	        android:padding="@string/standard_padding" >

	        <ImageView
	            android:id="@+id/instructions_image2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:src="@drawable/instructions_fpo" />

	        <ImageView
	            android:id="@+id/instructions_image3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/instructions_image2"
	            android:layout_marginLeft="@string/standard_margin"
	            android:src="@drawable/instructions_fpo" />
	        
	        <TextView
		        android:id="@+id/instructions_panelText2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/instructions_image2"
		        android:layout_marginTop="@string/standard_margin"
		        android:text="@string/instructions_panel2"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="@color/text_light" />
	        
	    </RelativeLayout>
	    
	    <!--  third panel -->
	    <RelativeLayout
	        android:id="@+id/instructions_panel3"
	        style="@style/instructions_panel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/instructions_panel2"
	        android:layout_marginTop="@string/standard_margin"
	        android:isScrollContainer="true"
	        android:padding="@string/standard_padding" >

	        <ImageView
	            android:id="@+id/instructions_image4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:src="@drawable/instructions_fpo" />

	        <TextView
	            android:id="@+id/instructions_panelText3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_toLeftOf="@+id/instructions_image4"
	            android:layout_marginRight="@string/standard_margin"
	            android:text="@string/instructions_panel3"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/text_light" />
	        
	    </RelativeLayout>
	
	</RelativeLayout>
	
</ScrollView>